more dark mode fixes

--- a/ui/public/storybook-overrides.css
+++ b/ui/public/storybook-overrides.css
@@ -15,6 +15,8 @@
 
 /* Override dark mode in Storybook docs. */
 :root :has(#storybook-docs:not([hidden='true'])) {
+    --color-brand: 270 50% 80%;
     --color-text: 0 0% 20%;
+    --color-neutral-900: 0 0% 95%;
     color-scheme: light !important;
 }
